test/invalid-narrowing-cast/viewer-pink.h

/*
 * Copyright/Licensing information.
 */

/* inclusion guard */
#ifndef __VIEWER_PINK_H__
#define __VIEWER_PINK_H__

#include "viewer-file.h"
#include <glib-object.h>
/*
 * Potentially, include other headers on which this header depends.
 */

G_BEGIN_DECLS

/*
 * Type declaration.
 */
#define VIEWER_TYPE_PINK viewer_pink_get_type() /* defined by the G_DECLARE... macro below */
/*
   viewer - module
   pink - class

   the name viewer_pink_get_type is generated by the macro G_DECLARE.. by concaten
*/
G_DECLARE_DERIVABLE_TYPE (ViewerPink, viewer_pink, VIEWER, PINK, ViewerFile)

struct _ViewerPinkClass
{
  GObjectClass parent_class;


  void (* open) (ViewerFile  *file,
                 GError     **error);
  void (* make_it_pink) (void);


  /* Padding to allow adding up to 12 new virtual functions without
   * breaking ABI. */
  gpointer padding[12];
};

/*
 * Method definitions.
 */
ViewerPink *viewer_pink_new (void);

// Inherit from ViewerFile
// void viewer_file_open(ViewerPink *self, GError **error);
void viewer_make_it_pink(ViewerPink *self);

G_END_DECLS

#endif /* __VIEWER_FILE_H__ */
